# samp-discord-connector

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  SimpleFS  SimpleFS.pwn  appveyor.yml  discord-connector.inc.in  discord-encoding.inc  pawn.json  vcpkg-response-file.txt
.github/workflows/: build.yml  release.yml
libs/json/: json.hpp
src/: Bot.cpp  Bot.hpp  CCallback.cpp  CCallback.hpp  CChannel.cpp  CChannel.hpp  CDispatcher.cpp  CDispatcher.hpp  CError.hpp  CLog.hpp  CMakeLists.txt  CMessage.cpp  CMessage.hpp  CNetwork.cpp  CNetwork.hpp  CSingleton.hpp  Callback.hpp  Channel.cpp  Channel.hpp  Command.cpp  Command.hpp  CommandInteraction.cpp  CommandInteraction.hpp  Embed.cpp  Embed.hpp  Emoji.cpp  Emoji.hpp  Error.hpp  Guild.cpp  Guild.hpp  Http.cpp  Http.hpp  Logger.cpp  Logger.hpp  Message.cpp  Message.hpp  Network.cpp  Network.hpp  Overwrite.cpp  Overwrite.hpp  (+19 more)
